<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_marker"
            android:title="@string/nav_loc"  />

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_uber_black"
            android:title="@string/nav_info" />


        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_helpline"
            android:title="@string/nav_helpline" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about_us" />

        <!--<item-->
            <!--android:id="@+id/logout_nav"-->
            <!--android:icon="@drawable/ic_logout"-->
            <!--android:title="@string/logout_nav" />-->
    </group>

    <!--<item android:title="Other">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_about_us"-->
                <!--android:title="@string/nav_about_us" />-->
            <!--<item-->
                <!--android:id="@+id/nav_privacy_policy"-->
                <!--android:title="@string/privacy_policy" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>